# Kana

./: .env-example  .gitignore  Config-example.toml  LICENSE  README.md  bot.py  main.py  pyproject.toml  requirements.txt  schema.sql
backend/: README.md  app.py  avyh.conf-example  utils.py
backend/routes/: __init__.py  avatars.py  get.py  get_raw.py  ping.py  static.py
backend/setup/: avyh.service-example
cogs/: __init__.py  admin.py  animals.py  download.py  errors.py  events.py  filter.py  help.py  logger.py  misc.py  moderation.py  owner.py  ping.py  pokemon.py  search.py  snipe.py  stats.py  username.py  utility.py  yoink.py  youtube.py
cogs/API/: anidex.py  animals.py  anime.py
cogs/Animals/: animals.py
cogs/Developer/: owner.py
cogs/Events/: errors.py  filter.py  random.py  yoink.py
cogs/Helpful/: help.py
cogs/Misc/: username.py  yoink.py
cogs/Moderation/: moderation.py  modules.py
cogs/Utilities/: download.py  ping.py  pokemon.py  search.py  snipe.py  stats.py
cogs/_utils/: __init__.py  constants.py  library_override.py  subclasses.py  time.py
cogs/animanga/: __init__.py  anilist.py  types.py
cogs/search/: __init__.py  spotify.py  types.py
cogs/utils/: __init__.py  constants.py  db.py  library_override.py  markdown.py  paginator.py  subclasses.py  time.py
dev/yasnippets/: cog_template.py  doc_string.py
examples/: Kanapy.json  Kanapy.service  README.md
